tests/files/invalid_blendfiles/invalid_window_workspace_hook.blend
version https://git-lfs.github.com/spec/v1
oid sha256:bb2655e689f9772fa6f61ed4a5d7f6cbf828d09968499414e3f973279d562bfa
size 81171
